--- a/DG_github/index.html
+++ b/DG_github/index.html
@@ -2,94 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>UI/UX by DG.webdesign</title>
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="fonts/">
+	<title>DG-artstudio</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header>
-		<div class="container">
-			<div class="row header-top">
-				<div class="col-sm-2">
-					<p>Веб-разработка<br>Дмитрий Гаврилов</p>
-				</div>
-				<div class="col-sm-7">
-					<ul class="header-nav">
-						<li><a href="#">Программа полета</a></li>
-						<li><a href="#"> Отзывы</a></li>
-						<li><a href="#">Формат</a></li>
-						<li><a href="#">Цены</a></li>
-					</ul> 
-				</div>
-				<div class="col-sm-3 header-start">
-					<a href="#">Полететь со мной</a>
-				</div>
-			</div>
-			<div class="row">		
-				<div class="col-sm-5 headr-main">		  
-					<h1> отправляйся со мной в космическое <br> путешествие моей фантазии</h1>
-					<p class="headr-main-second">Запишись на первый полет со SHTURM'ом "Веб-дизайнер 1.0", где ты попадешь в закрытый мир разработчика, быстро научишься писать код и начнешь зарабатывать на этом</p>
-					<p>Старт: 1 августа</p>
-					<div class="call-to-action">
-						<p class="headr-italic">Дави на эту кнопку,<br>если хочешь узнать подробности</p>
-						<picture>
-							<source type="img/svg+xml" srcset="img/main-arrow-figma-2.svg">
-								<img src="img/main-arrow-figma-2.png" alt="Описание баннера">
-							</picture>
-						</div>
-						<div class="headr-btn">
-							<a href="#">
-								<picture>
-									<source type="img/svg+xml" srcset="img/play-figma.svg">
-										<img src="img/play-figma.png" alt="play">
-									</picture>
-									Посмотреть карту полёта
-								</a>
-							</div>
-						</div>
-						<div class="col-md-5">
-							<img class="rellax rocket" data-rellax-speed="16" src="img/rocket-1-c.png" alt="Рокета">
-						</div>
-					</div>
-				</div>				
-			</header>
-			<section id="who">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 who-headr">
-							<h2>Если ты попал <br>на эту страницу</h2>
-							<p>То, скорее всего, ты относишься к<br>одному из этих типов людей</p>
-						</div>
-					</div>
-					<div class="row types">
-						<div class="col-md-6 beginer-text">
-							<h4>Ты-новичок</h4>
-							<p>И еще не зарабатываешь на создании сайтов, но тема тебе <br>интересна и ты хотел бы получить навык верстки, чтобы<br>зарабатывать больше, чем есть сейчас</p>
-						</div>
-						<div class="col-md-6 beginer-img">
-							<span>Новичок</span>
-							<picture>
-								<source type="img/svg+xml" srcset="img/beginer-2-a.svg">
-									<img src="img/beginer-2-a.png" alt="Описание баннера">
-								</picture>
-							</div>
-						</div>
-					</div>
-				</section>
-
-
-				<script src="js/bootstrap.min.js"></script>
-				<script src="js/rellax.min.js"></script>
-				<script>
-          var rellax = new Rellax('.rellax');
-        </script>
-
+	<div class="container">
+	<h1 class="glitch">DG-artstudio</h1>
+	<p>promo  polygraphy  web  design</p>
+	<p class="email">dg-artstudio@outlook.com</p>
+</div>
 </body>
 </html>
